2015-12-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Quit the loop when there is no end match.

GNU nano 2.5.0 - 2015.12.05

2015-12-05  Chris Allegretta <chrisa@asty.org>
	* src/nano.c (main) : key_defined() is an ncurses-ism.  Add
	better checks for this.

2015-12-05  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c: Fix compilation with --enable-tiny --enable-justify.
	* doc/man/{nano.1,rnano.1,nanorc.5}, doc/texinfo/nano.texi:
	Update date and version number to match the upcoming release.
	* src/files.c, src/winio.c: Avoid two compilation warnings.

2015-12-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h: Avoid a compilation warning.
	* src/color.c (reset_multis_for_id, reset_multis_before/after):
	Fuse these three functions into a single one.
	* src/*.c: Rewrap some lines and tweak some comments.

2015-12-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (discard_until): Move the trimming of the undo stack
	into a separate function, so it can be used elsewhere.
	* src/text.c (do_justify): Discard the entire undo stack, to prevent
	nano from dying (or making mistakes) when trying to undo edits after
	a justification.  This works around Savannah bug #45531.
	* src/text.c (do_indent): Also here discard the entire undo stack, to
	prevent nano from making mistakes when trying to undo edits after an
	indentation change.  This works around Savannah bug #46591.
	* doc/man/nano.1, doc/texinfo/nano.texi: Add a note about undo not
	working after a justification or reindentation.

2015-12-02  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/python.nanorc: Don't colour triple quotes by themselves.
	* doc/syntax/python.nanorc: Treat backslashed quotes properly, and
	don't colour triple-quoted strings in two manners.
	* src/text.c (do_justify): Accept not just the Uncut keystroke but
	also the Undo keystroke for undoing a justification.
